static/css/base.css
:root {
    --forest-green: #005E02;
    --coffee: #332501;
    --orange: #D98200;
    --beige: #DFD898;
    --white: #ffffff;
}

body {
    font-family: 'quicksand';
    background-color: var(--white);
}

/* navbar */

#the-roastery-logo {
    font-size: 1.5rem;
    padding-left: 1rem;
    padding-right: 1rem;
    color: var(--beige);
    height: 3rem;
    font-family: 'lora';
}

.navbar {
    background-color: var(--coffee);
    
}

.nav-item a {
    color: var(--beige);
    font-weight: bold;
    text-decoration: none;
}

.nav-link {
    height: 3rem;
}

.nav-item {
    height: 3rem;
    vertical-align: middle;
    margin: 0;
    display: flex;
    align-items: center;
    margin-left: 1rem;
}

.navbar-toggler {
    background-color: var(--beige);
    margin: 0 auto;
}

.navbar-toggler-icon .fa-bars {
    color:var(--coffee); 
    font-size: 1.75rem;
}

.dropdown {
    --bs-navbar-hover-color: var(--beige);
}

.dropdown-menu {
    background-color: var(--beige);
}

.dropdown-menu a {
    color: var(--coffee);
}

.btn-coffee {
    background-color: var(--beige);
    border-radius: 0.5rem;
    height: 3rem;
    padding: 0 1rem;
}

.btn-coffee a {
    color: var(--coffee);
    font-size: 1.25rem;
}

.btn-coffee a:hover {
    color: var(--beige);
}

.btn-coffee:hover {
    background-color: var(--forest-green);
    color: var(--beige);
}

.btn-shopping {
    font-size: 2.2rem;
    border: 0;
    padding: 0;
    padding-left: 1rem;
    color: var(--beige);
}

.btn-shopping:hover {
    color: var(--orange);
}

/* main content */

#main-content {
    background-image: url('/../media/coffee-home.jpg');
    background-size: cover;
    height: 70vh;
    margin: 3rem;
}

.home-page-container {
    position:relative;
}

.fancy-rectangle {
    position: absolute;
    top: 30vh;
    height: 19rem;
    width: 30vw;
}

.fancy-rectangle rect{
    fill: var(--orange);
    height: 19rem;
    width: 50vw;
}

#coffee-home-page-title {
    position: absolute;
    top: 30vh;
    width: 30vw;
    padding: 0.2rem;
    font-size: 1.5rem;
    font-family: 'lora';
    color: var(--coffee);
}

.btn-brown {
    background-color: var(--coffee);
}

.btn-brown a {
    text-decoration: none;
    color: var(--beige);
    font-size: 1.5rem;
}

.btn-brown:hover {
    background-color: var(--forest-green);
}

/* footer */

footer {
    padding-bottom: 1.75rem;
    background-color: var(--forest-green);
}

footer ul {
    padding: 0;
}

footer a {
    text-decoration: none;
}

.socials li {
    display: inline;
}

.socials i {
    color: var(--beige);
    font-size: 2.5rem;
    width: 23.5%;
    text-align: center;
    padding: 1.75rem 0 1rem;
    transition-delay: 0.2s;
}

.section-links li {
    text-align: center;
    list-style: none;
}

.section-links a {
    color: var(--beige);
    font-weight: bold;
    padding: 0.5rem 0;
    font-family: 'lora';
}

.socials i:hover, .section-links li a:hover {
    color: var(--orange);
}

/* media query for tablets */

@media screen and (min-width:768px) {
    #the-roastery-logo {
        font-size: 3rem;
    }

    #coffee-home-page-title {
        font-size: 2rem;
    }
}

/* media query for large screens*/

@media screen and (min-width:992px) {

    #coffee-home-page-title {
        font-size: 2.5rem;
    }
}

/* media query for larger screens*/

@media screen and (min-width:1400px) {

    #coffee-home-page-title {
        font-size: 3rem;
    }
}

